Layout Fixes
-Fixed many layout issues while mobile
-Added Steps when creating car

--- a/src/components/ImageGallery/ImageGallery.scss
+++ b/src/components/ImageGallery/ImageGallery.scss
@@ -1,9 +1,21 @@
 .image-gallery {
-  max-width: 800px;
-  img {
-    width: 100%;
+  @media screen and (min-width: 768px) {
     max-width: 800px;
-    max-height: 800px;
-    height: auto;
+    img {
+      width: 100%;
+      max-width: 800px;
+      max-height: 800px;
+      height: auto;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    max-width: 325px;
+
+    img {
+      width: 100%;
+      max-width: 325px;
+      height: auto;
+    }
   }
 }
