--- a/src/components/VehicleInfo/VehicleInfo.scss
+++ b/src/components/VehicleInfo/VehicleInfo.scss
@@ -1,6 +1,7 @@
 .vehicle-info {
   margin-top: 50px;
   min-height: 600px;
+  width: 100%;
 
   &__text {
     display: flex;
@@ -10,7 +11,7 @@
     align-items: flex-start;
     background-color: white;
     border-radius: 15px;
-    h1 {
+    h2 {
       font-weight: bold;
     }
   }
