--- a/src/layouts/HomeLayout/HomeLayout.scss
+++ b/src/layouts/HomeLayout/HomeLayout.scss
@@ -1,9 +1,8 @@
 .home-layout {
   min-width: 100%;
-  .ant-row {
-    width: 100%;
-  }
+
   &__header {
+    width: 100%;
     height: 60px;
     z-index: 1;
     position: fixed;
