--- a/src/pages/vehicleEdit/vehicleEdit.scss
+++ b/src/pages/vehicleEdit/vehicleEdit.scss
@@ -1,6 +1,5 @@
 .vehicle-edit {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   min-height: 100vh;
+  flex-direction: column;
 }
